2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Fix bug: Special case ‘idquote’ handling of ‘a.*’.

	* postgres-qcons.scm (idquote): If the id has a dot, no array
	notation and the part after the dot is ‘*’, don't double-quote that.

2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Elide macro ‘GH_STONED’.

	* gi.h [!HAVE_GUILE_MODSUP_H] (GH_STONED): Delete macro.
	(PERMANENT): Use ‘scm_permanent_object’.

2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move macro ‘DEFSMOB’ to gi.h.

	* gi.h (DEFSMOB): New macro.
	* libpq.c (init_module DEFSMOB): Delete macro.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[uninst int] Use $(DESTDIR) more.

	* Makefile.am (uninstall-hook): Use $(DESTDIR) more.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[inst] Zonk useless $(pkglibdir) if ‘USE_CMOD’.

	Probably better would be to teach Automake to DTRT.

	* Makefile.am (install-data-hook) [USE_CMOD]:
	Delete useless ‘$(DESTDIR)$(pkglibdir)’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] For consistency, use ‘unsigned long int’ for sepo tag.

	* libpq.c (sepo_type_tag): Change type to ‘unsigned long int’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Paper signed/unsigned wart for ‘PQmblen’ first arg.

	* libpq.c (pg_mblen): Cast first arg of ‘PQmblen’ to ‘void *’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Use ‘ERROR’ more.

	* libpq.c (pg_trace): Use ‘ERROR’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Convert auto var ‘FUNC_NAME’ to #define.

	This avoids "unused variable" warnings in newer Guile versions.

	* libpq.c (lob_flush, lob_end_input, lob_seek, lob_fill_input)
	(lob_write): #define FUNC_NAME internally; #undef too.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Prefer libpq headers in $(includedir)/postgresql, if available.

	* libpq.c: If <postgresql/libpq-fe.h> is