@@ -1,5 +1,12 @@
 2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[pq] Don't do "defer/allow ints" for Guile 1.8+.
+
+	* gi.h (GI_LEVEL, GI_LEVEL_NOT_YET_1_8): New #define:s.
+	(NOINTS, INTSOK): Define to nothing if for Guile 1.8+.
+
+2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[qcons] Fix bug: Special case ‘idquote’ handling of ‘a.*’.
 
 	* postgres-qcons.scm (idquote): If the id has a dot, no array
